# Astral3DEditor

./: .gitmodules  README.md
.github/workflows/: ci-cd.yml
Astral3DEditor/: .env  .env.development  LEGAL.md  components.d.ts  package-lock.json  package.json  vite.config.ts
Astral3DEditor/src/components/assets/: CadLibrary.vue
Astral3DEditor/src/core/: Loader.ts  Viewport.ts
Astral3DEditor/src/core/dxf/: drawShare.ts  drawUtils.ts
Astral3DEditor/src/hooks/: useWebSocket.ts
Astral3DEditor/src/language/: zh-CN-en-US.ts
Astral3DEditorGoBack/: main.go  package-lock.json
Astral3DEditorGoBack/conf/: app.conf  app.conf.backup
Astral3DEditorGoBack/controllers/system/: lb_sys_upload.go
Astral3DEditorGoBack/routers/: router.go
Astral3DEditorGoBack/static/rocksi/: about.57f9c10b.css.map  blockly.a0d03a36.css  blockly.a0d03a36.css.map  index.html  main.402a44b2.css.map  spinner.eabd2644.css  spinner.eabd2644.css.map  viewport.85adbed6.css.map
Rocksi-master/: .gitignore  G1_INTEGRATION_README.md  README_Go2_Integration.md  TEST_G1_ROBOT.md  index.html  package-lock.json  package.json  structure.txt  vite.config.js
Rocksi-master/assets/models/g1_description/: CMakeLists.txt  LICENSE  package.xml
Rocksi-master/assets/models/g1_description/urdf/: g1_29dof_rocksi.urdf  g1_simple_test.urdf
Rocksi-master/css/: blockly.css
Rocksi-master/src/: index.js
Rocksi-master/src/editor/: blockly.js  toolbox.xml
Rocksi-master/src/i18n/: blockly_de.js  blockly_en.js
Rocksi-master/src/simulator/: gui.js  scene.js  simulation.js  utils.js
(+38 files in other folders)
